--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 .DS_Store
 .vscode
+
 *.egg-info
 __pycache__
 build
 dist
+
 venv
+.venv
 
 # Legacy state directories, moved to ~/.local/state/mixxx-bisect
 /mixxx.git
